using UnityEngine;
using System.Collections;

public class AnimationStrings
{

    public const string idle = "Idle";
    public const string jump = "Jump";
    public const string doublejump = "DoubleJump";
    public const string run = "Run";
    public const string hit = "Hit";
    public const string attack = "Attack";
    public const string jumpattack = "JumpAttack";
    public const string doublejumpattack = "DoubleJumpAttack";

    public const string hadoukenattack = "HadoukenAttack";
    public const string microphoneattack = "MicrophoneAttack";

    public const string death = "Death";

}
